## Change history


### [2.3.0 - 2019/06/23]
* Added Matrix2 struct.
* Added Matrix4 struct.
* Added Vector4 struct.
* Added property IsIdentity to Matrix3. This will allow to avoid unnecessary multiplications during transformations.
* Added TransformBy method that takes a Matrix4 (transformation, column major convention) as argument to the EntityObject class.
* Added TransformBy method that takes a Matrix3 (rotation and scale, column major convention) and a Vector3 (translation) as arguments to the EntityObject class.
* Added Explode method to Insert entity. A few entities might not appear as expected when a non-uniform and/or negative scaling is applied, read the TransformBy method documentation of each entity.
* Added Explode method to MLine entity. It will convert the actual MLine to its Line and Arcs components.
* Added custom drawing variables, now it is possible to add your own header variables to the drawing. When a DXF is loaded all unrecognized header variables will be automatically added as custom header variables to the drawing.
* Added Width property to Text entity it is only applicable if the Alignment is Fit or Aligned.
* Added MirrText DrawingVariable to the document, it controls whether the text will be mirrored or not when a symmetry is performed.
* Added the static property DefaultMirrText to the Text and MText entity. It is the equivalent MirrText DrawingVariable used when the entity does not belong to a DxfDocument.
* Added the static property DefaultInsUnits to the Insert entity. It is the equivalent InsUnits DrawingVariable used when the entity does not belong to a DxfDocument.
* Added two new constructors to Viewport class to create rectangular viewports.
* Added two new constructors to the Underlay class that takes also the position and scale.
* Added properties IsByLayer and IsByBlock to the Linetype class.
* Added properties IsBackward and IsUpsideDown to Text entity.